--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ember-cli": "0.1.3",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.6",
+    "ember-cli-divshot": "^0.1.6",
     "ember-cli-esnext": "0.1.1",
     "ember-cli-htmlbars": "^0.3.4",
     "ember-cli-ic-ajax": "0.1.1",
