--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,7 @@ box: wercker/nodejs
 build:
   steps:
     - npm-install
-    - plasticine/bower-install@0.0.4
+    - hgen/bower-install@0.5.7
     - npm-test
     - script:
         name: deploy to divshot.io
