--- a/wercker.yml
+++ b/wercker.yml
@@ -10,5 +10,7 @@ deploy:
         name: deploy to divshot.io
         code: |
           sudo npm install -g divshot-cli
+          echo "Before divshot push"
+          echo "TARGET_NAME - $WERCKER_DEPLOYTARGET_NAME"
           divshot push $WERCKER_DEPLOYTARGET_NAME --token $DIVSHOT_TOKEN
 
