--- a/wercker.yml
+++ b/wercker.yml
@@ -9,8 +9,6 @@ deploy:
     - script:
         name: deploy to divshot.io
         code: |
-          sudo npm install -g divshot-cli
-          echo "Before divshot push"
-          echo "TARGET_NAME - $WERCKER_DEPLOYTARGET_NAME"
+          npm install -g divshot-cli
           divshot push $WERCKER_DEPLOYTARGET_NAME --token $DIVSHOT_TOKEN
 
