--- a/wercker.yml
+++ b/wercker.yml
@@ -1,17 +1,29 @@
-box: olger/box-yeoman@0.5.5
+box: wercker/nodejs
+
+# Brunch's production build can take a while and doesn't output
+# anything by default. Either set a long timeout like this one, or
+# run it in debug mode to output logs.
+no-response-timeout: 10
+
+# Build definition
 build:
-  steps:
-    - npm-install
-    - hgen/bower-install@0.5.7
-    - npm-test
+    # The steps that will be executed on build
+    steps:
+        - bundle-install
+        - npm-install
+        - plasticine/bower-install@0.0.4
+
+        # A step that executes `npm test` command
+        - npm-test
+
 deploy:
-  steps:
-    - script:
-        name: deploy to divshot.io
-        code: |
-          alias divshot=./node_modules/.bin/divshot
-          divshot --version
-          divshot config
-          divshot config:remove root
-          divshot config:add root $WERCKER_OUTPUT_DIR
-          ./node_modules/.bin/divshot push $WERCKER_DEPLOYTARGET_NAME --token $DIVSHOT_TOKEN
+    steps:
+        - script:
+            name: Deploy to Divshot
+            code: |
+                alias divshot=./node_modules/.bin/divshot
+                divshot --version
+                divshot config
+                divshot config:remove root
+                divshot config:add root $WERCKER_OUTPUT_DIR
+                ./node_modules/.bin/divshot push $WERCKER_DEPLOYTARGET_NAME --token $DIVSHOT_TOKEN
