--- a/wercker.yml
+++ b/wercker.yml
@@ -11,7 +11,7 @@ build:
     steps:
         - bundle-install
         - npm-install
-        - plasticine/bower-install@0.0.4
+        - hgen/bower-install@0.5.7
 
         # A step that executes `npm test` command
         - npm-test
