--- a/wercker.yml
+++ b/wercker.yml
@@ -21,10 +21,5 @@ deploy:
         - script:
             name: Deploy to Divshot
             code: |
-                npm install bower
-                alias divshot=./node_modules/.bin/divshot
-                divshot --version
-                divshot config
-                divshot config:remove root
-                divshot config:add root $WERCKER_OUTPUT_DIR
-                ./node_modules/.bin/divshot push $WERCKER_DEPLOYTARGET_NAME --token $DIVSHOT_TOKEN
+              npm install -g divshot-cli 
+              divshot push $WERCKER_DEPLOYTARGET_NAME --token $DIVSHOT_TOKEN
