--- a/wercker.yml
+++ b/wercker.yml
@@ -21,5 +21,5 @@ deploy:
         - script:
             name: Deploy to Divshot
             code: |
-              npm install -g divshot-cli 
+              sudo npm install -g divshot-cli 
               divshot push $WERCKER_DEPLOYTARGET_NAME --token $DIVSHOT_TOKEN
